# Tritonix

./: .gitignore  README.md  package-lock.json
backend/: .qiniu_pythonsdk_hostscache.json  README.md  pyproject.toml  updata_frame.py  updata_schema.py
backend/app/: main.py
backend/app/api/: user.py  video.py
backend/app/core/: config.py
backend/app/db/: mongodb.py
backend/app/schemas/: user.py  video.py
backend/app/services/: user_service.py  video_service.py
docs/: architecture-documentation.md
frontEnd/: README.md  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontEnd/src/: App.vue  main.ts  style.scss
frontEnd/src/components/: CloseIcon.vue  LoadingPage.vue  LoginContainer.vue  LoginInput.vue  LoginModal.vue  LoginPart.vue  RegisterPart.vue  busKey.ts
frontEnd/src/components/button/: MainButton.vue
frontEnd/src/components/layout/: BaseLayout.vue  MainContainer.vue
frontEnd/src/components/sideBar/: LeftSideBar.vue  LoginButton.vue  SideBarItem.vue  sideBar.d.ts
frontEnd/src/components/slider/: SlideItem.vue  VerticalSlider.vue
frontEnd/src/components/topBar/: TopBar.vue  UserInfoBox.vue
frontEnd/src/components/video/: ProgressBar.vue  VideoPlayer.vue
frontEnd/src/demo/: VerticalSlide.vue  useOffsetPagination.vue
frontEnd/src/hooks/: usePagination.ts
frontEnd/src/mock/: 1.js  index.ts  resource.ts
frontEnd/src/request/: index.ts  instance.ts  video.ts
frontEnd/src/router/: index.ts  routes.ts
frontEnd/src/types/: components.d.ts  user.d.ts  video.d.ts
frontEnd/src/utils/: getUid.ts
(+7 files in other folders)
