[tool.poetry]
name = "tritonix-backend-v1-0"
version = "0.1.0"
description = ""
authors = ["GHuiKai <aodesai19899278@13.com>"]
readme = "README.md"
packages = [{include = "tritonix_backend_v1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pymongo = "^4.6.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
